adding changes to homepage - under construction

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Encouraging Productions</title>
   </head>
   <body>
-    <h1>Under Maintenance - back soon!</h1>
+    <header>
+      <div class="flex-container">
+        <h1>ENCOURAGING</h1>
+        <h2>PRODUCTIONS</h2>
+      </div>
+    </header>
+    <main>
+      <img src="undraw_under_construction_46pa.svg" />
+      <p>Under construction</p>
+    </main>
   </body>
 </html>
