updating contact email

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     </header>
     <main>
       <img src="undraw_under_construction_46pa.svg" />
-      <p>Under construction</p>
     </main>
+    <p class="text">
+      Website under construction 🔨
+      <a href="mailto:cameron@encouragingproductions.com"
+        >cameron@encouragingproductions.com</a
+      >
+    </p>
   </body>
 </html>
