--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -18,12 +19,12 @@
     </header>
     <main>
       <img src="undraw_under_construction_46pa.svg" />
+      <p class="text">
+        Website under construction 🔨
+        <a href="mailto:cameron@encouragingproductions.com"
+          >cameron@encouragingproductions.com</a
+        >
+      </p>
     </main>
-    <p class="text">
-      Website under construction 🔨
-      <a href="mailto:cameron@encouragingproductions.com"
-        >cameron@encouragingproductions.com</a
-      >
-    </p>
   </body>
 </html>
