--- a/takingstock.html
+++ b/takingstock.html
@@ -17,26 +17,45 @@
       </div>
       <div class="img_gallery">
         <div class="img_tile">
-          <img src="https://source.unsplash.com/random/300x300" />
+          <img src="./image1.png" />
           <div class="caption">This is a caption</div>
         </div>
         <div class="img_tile">
-          <img src="https://source.unsplash.com/random/300x300" />
+          <img src="./image2.png" />
           <div class="caption">This is a caption</div>
         </div>
         <div class="img_tile">
-          <img src="https://source.unsplash.com/random/300x300" />
+          <img src="./image4.png" />
           <div class="caption">This is a caption</div>
         </div>
         <div class="img_tile">
-          <img src="https://source.unsplash.com/random/300x300" />
+          <img src="./image6.png" />
           <div class="caption">This is a caption</div>
         </div>
         <div class="img_tile">
-          <img src="https://source.unsplash.com/random/300x300" />
+          <img src="./image7.png" />
+          <div class="caption">This is a caption</div>
+        </div>
+        <div class="img_tile">
+          <img src="./image8.png" />
+          <div class="caption">This is a caption</div>
+        </div>
+        <div class="img_tile">
+          <img src="./image10.png" />
+          <div class="caption">This is a caption</div>
+        </div>
+        <div class="img_tile">
+          <img src="./image11.png" />
+          <div class="caption">This is a caption</div>
+        </div>
+        <div class="img_tile">
+          <img src="./image12.png" />
           <div class="caption">This is a caption</div>
         </div>
       </div>
     </div>
+    <footer>
+      <p>&#169; Taking Stock. All rights reserved.</p>
+    </footer>
   </body>
 </html>
