updating taking stock page

--- a/takingstock.html
+++ b/takingstock.html
@@ -3,59 +3,132 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css" />
+    <html lang="en"></html>
+    <meta name="description" content="the homepage for TAKING STOCk" />
+    <link rel="stylesheet" href="./styles/taking_stock.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/TS_apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/TS_favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/TS_favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>TAKING STOCK</title>
   </head>
   <body>
     <header class="taking_stock_header">
       <h1>TAKING STOCK</h1>
-      <div class="icons">Icons go here</div>
+      <div class="icon">
+        <img src="./images/youtube.svg" />
+        <a
+          href="https://www.encouragingproductions.com/"
+          aria-label="encouragingproductions.com"
+          ><img src="./images/logo.png"
+        /></a>
+      </div>
     </header>
 
     <div class="taking_stock_container">
       <div class="hero">
-        <div class="text-container"><h2>OUR TEAM</h2></div>
+        <h2>OUR TEAM</h2>
       </div>
       <div class="img_gallery">
         <div class="img_tile">
-          <img src="./image1.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image5.png" />
+          <div class="caption">
+            <p class="bold">MR WINSTANLEY</p>
+            <p>Manager, leader, currently out of office</p>
+          </div>
+        </div>
+
+        <div class="img_tile">
+          <div class="img_overlay"></div>
+          <img src="./images/image2.png" />
+          <div class="caption">
+            <p class="bold">MICHAELA</p>
+            <p>Administrator, assistant, iPad coordinator</p>
+          </div>
         </div>
         <div class="img_tile">
-          <img src="./image2.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image12.png" />
+          <div class="caption">
+            <p class="bold">PAXTON</p>
+            <p>Sales, numbers, quite a character!</p>
+          </div>
         </div>
         <div class="img_tile">
-          <img src="./image4.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image7.png" />
+          <div class="caption">
+            <p class="bold">JADE</p>
+            <p>Presentations, whiteboards, a real fighter</p>
+          </div>
         </div>
         <div class="img_tile">
-          <img src="./image6.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image10.png" />
+          <div class="caption">
+            <p class="bold">ARTHUR</p>
+            <p>Not an employee. Michaela, remove this</p>
+          </div>
         </div>
         <div class="img_tile">
-          <img src="./image7.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image1.png" />
+          <div class="caption">
+            <p class="bold">GAIL</p>
+            <p>Human resources, human emotions</p>
+          </div>
         </div>
         <div class="img_tile">
-          <img src="./image8.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image6.png" />
+          <div class="caption">
+            <p class="bold">SIMON</p>
+            <p>Supervisor. Has a fiancee (newly pregnant)</p>
+          </div>
         </div>
         <div class="img_tile">
-          <img src="./image10.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image8.png" />
+          <div class="caption">
+            <p class="bold">ANDREA</p>
+            <p>Team leader, not bitter</p>
+          </div>
         </div>
         <div class="img_tile">
-          <img src="./image11.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image11.png" />
+          <div class="caption">
+            <p class="bold">FRANK</p>
+            <p>Business development guru, two thumbs up!</p>
+          </div>
         </div>
         <div class="img_tile">
-          <img src="./image12.png" />
-          <div class="caption">This is a caption</div>
+          <div class="img_overlay"></div>
+          <img src="./images/image4.png" />
+          <div class="caption">
+            <p class="bold">DOCTOR</p>
+            <p>Good doc, really nice guy</p>
+          </div>
         </div>
       </div>
     </div>
     <footer>
-      <p>&#169; Taking Stock. All rights reserved.</p>
+      <p>&#169; Taking Stock, 2021. All rights reserved.</p>
     </footer>
   </body>
 </html>
