--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <title>Encouraging Productions</title>
   </head>
+
   <body>
     <header>
-      <div class="flex-container">
+      <div class="header-container">
         <h1>ENCOURAGING</h1>
         <h2>PRODUCTIONS</h2>
       </div>
     </header>
     <main>
-      <img src="undraw_under_construction_46pa.svg" />
-      <p class="text">
-        Website under construction 🔨
-        <a href="mailto:cameron@encouragingproductions.com"
-          >cameron@encouragingproductions.com</a
-        >
-      </p>
+      <div class="flex-container">
+        <img class="logo" src="./images/logo.png" />
+        <p class="copy">
+          Nam eu volutpat ante. In ultricies lacus tellus, a tristique dolor
+          auctor et. In porttitor ut enim eget malesuada. Aenean ultricies,
+          tortor ac sollicitudin tempor, mi nunc faucibus arcu, ut dapibus
+          turpis justo eu nunc. Suspendisse sit amet risus quam. Praesent
+          facilisis pretium lacus, et egestas est commodo nec. Nullam quis
+          sollicitudin lacus.
+        </p>
+      </div>
     </main>
   </body>
 </html>
