adding alt text to images

--- a/takingstock.html
+++ b/takingstock.html
@@ -46,7 +46,10 @@
       <div class="img_gallery">
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image5.png" />
+          <img
+            src="./images/image5.png"
+            alt="an elderly man in a suit looking into the camera"
+          />
           <div class="caption">
             <p class="bold">MR WINSTANLEY</p>
             <p>Manager, leader, currently out of office</p>
@@ -55,15 +58,22 @@
 
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image2.png" />
+          <img
+            src="./images/image2.png"
+            alt="a young woman sitting at a desk looking at an iPad"
+          />
           <div class="caption">
             <p class="bold">MICHAELA</p>
             <p>Administrator, assistant, iPad coordinator</p>
           </div>
         </div>
+
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image12.png" />
+          <img
+            src="./images/image12.png"
+            alt="a young man sitting in front of a computer and smiling"
+          />
           <div class="caption">
             <p class="bold">PAXTON</p>
             <p>Sales, numbers, quite a character!</p>
@@ -71,7 +81,10 @@
         </div>
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image7.png" />
+          <img
+            src="./images/image7.png"
+            alt="a young woman stands smiling in front of a whiteboard"
+          />
           <div class="caption">
             <p class="bold">JADE</p>
             <p>Presentations, whiteboards, a real fighter</p>
@@ -79,7 +92,10 @@
         </div>
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image10.png" />
+          <img
+            src="./images/image10.png"
+            alt="an old man in a suit using a laptop"
+          />
           <div class="caption">
             <p class="bold">ARTHUR</p>
             <p>Not an employee. Michaela, remove this</p>
@@ -87,7 +103,10 @@
         </div>
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image1.png" />
+          <img
+            src="./images/image1.png"
+            alt="a woman sitting at a computer smiling at the camera"
+          />
           <div class="caption">
             <p class="bold">GAIL</p>
             <p>Human resources, human emotions</p>
@@ -95,7 +114,10 @@
         </div>
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image6.png" />
+          <img
+            src="./images/image6.png"
+            alt="a man speaking on the phone standing in front of a wall display saying productivity"
+          />
           <div class="caption">
             <p class="bold">SIMON</p>
             <p>Supervisor. Has a fiancee (newly pregnant)</p>
@@ -103,7 +125,10 @@
         </div>
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image8.png" />
+          <img
+            src="./images/image8.png"
+            alt="a woman using a laptop and smiling"
+          />
           <div class="caption">
             <p class="bold">ANDREA</p>
             <p>Team leader, not bitter</p>
@@ -111,7 +136,10 @@
         </div>
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image11.png" />
+          <img
+            src="./images/image11.png"
+            alt="a middle aged man using a laptop and stroking his chin"
+          />
           <div class="caption">
             <p class="bold">FRANK</p>
             <p>Business development guru, two thumbs up!</p>
@@ -119,7 +147,10 @@
         </div>
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img src="./images/image4.png" />
+          <img
+            src="./images/image4.png"
+            alt="a doctor writing in a prescription pad"
+          />
           <div class="caption">
             <p class="bold">DOCTOR</p>
             <p>Good doc, really nice guy</p>
