updating encouraging productions homepage

--- a/index.html
+++ b/index.html
@@ -15,20 +15,41 @@
     <header>
       <div class="header-container">
         <h1>ENCOURAGING</h1>
-        <h2>PRODUCTIONS</h2>
+        <h1>PRODUCTIONS</h1>
       </div>
     </header>
     <main>
       <div class="flex-container">
-        <img class="logo" src="./images/logo.png" />
-        <p class="copy">
-          Nam eu volutpat ante. In ultricies lacus tellus, a tristique dolor
-          auctor et. In porttitor ut enim eget malesuada. Aenean ultricies,
-          tortor ac sollicitudin tempor, mi nunc faucibus arcu, ut dapibus
-          turpis justo eu nunc. Suspendisse sit amet risus quam. Praesent
-          facilisis pretium lacus, et egestas est commodo nec. Nullam quis
-          sollicitudin lacus.
-        </p>
+        <div class="copy">
+          <p>
+            Encouraging Productions was set up by Cameron Loxdale to make
+            comedy.
+          </p>
+          <p>
+            Mostly DIY, silly, no budget projects that are labours of love.
+            We've produced sketches, podcasts, music videos and a web series
+            Taking Stock, which is set to be thrown out onto the internet
+            throughout October.
+          </p>
+          <p>
+            Encouraging Productions was shortlisted for a BCG Production Award
+            in 2020 for this video starring Christy Coysh about a grime artist
+            with a very specific dream.
+          </p>
+        </div>
+
+        <div class="iframe-container">
+          <iframe
+            src="https://www.youtube.com/embed/RFeepP7w1zY"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+
+        <img src="./images/Production shortlist laurels - red.png" />
+        <p class="contact">Contact: cameron@encouragingproductions.com</p>
       </div>
     </main>
   </body>
