--- a/takingstock.html
+++ b/takingstock.html
@@ -30,6 +30,10 @@
     <header class="taking_stock_header">
       <h1>TAKING STOCK</h1>
       <div class="icon">
+        <a
+        href="https://www.youtube.com/playlist?list=PL1a4hwPuRe1Cz_fe6RdT8VwDVOaahxi-F"
+        aria-label="YouTube"
+        >
         <img src="./images/youtube.svg" />
         <a
           href="https://www.encouragingproductions.com/"
@@ -124,11 +128,13 @@
           </div>
         </div>
         <div class="img_tile">
-          <div class="img_overlay"></div>
+          <a href="https://www.youtube.com/watch?v=IFDe581_Rhk">
+           <div class="img_overlay"></div>
           <img
             src="./images/image8.png"
             alt="a woman using a laptop and smiling"
           />
+        </a>
           <div class="caption">
             <p class="bold">ANDREA</p>
             <p>Team leader, not bitter</p>
