adding links, removing autoplay

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
           <p>
             Mostly DIY, silly, no budget projects that are labours of love.
             We've produced sketches, podcasts, music videos and a web series
-            Taking Stock, which is set to be thrown out onto the internet
-            throughout October.
+            <a href="https://www.encouragingproductions.com/takingstock"
+              >Taking Stock</a
+            >, which is set to be thrown out onto the internet throughout
+            October.
           </p>
           <p>
             Encouraging Productions was shortlisted for a BCG Production Award
@@ -43,13 +45,17 @@
             src="https://www.youtube.com/embed/RFeepP7w1zY"
             title="YouTube video player"
             frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
         </div>
 
         <img src="./images/Production shortlist laurels - red.png" />
-        <p class="contact">Contact: cameron@encouragingproductions.com</p>
+        <p class="contact">
+          <a href="mailto:cameron@encouragingproductions.com"
+            >Contact: cameron@encouragingproductions.com</a
+          >
+        </p>
       </div>
     </main>
   </body>
