--- a/takingstock.html
+++ b/takingstock.html
@@ -48,10 +48,12 @@
         <h2>OUR TEAM</h2>
       </div>
       <div class="img_gallery">
+      <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
-          <img
+          <img class="resize"
             src="./images/image5.png"
+            
             alt="an elderly man in a suit looking into the camera"
           />
           <div class="caption">
@@ -59,7 +61,8 @@
             <p>Manager, leader, currently out of office</p>
           </div>
         </div>
-
+        </div>
+        <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
@@ -71,7 +74,8 @@
             <p>Administrator, assistant, iPad coordinator</p>
           </div>
         </div>
-
+        </div>
+        <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
@@ -83,6 +87,8 @@
             <p>Sales, numbers, quite a character!</p>
           </div>
         </div>
+        </div>
+        <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
@@ -94,6 +100,8 @@
             <p>Presentations, whiteboards, a real fighter</p>
           </div>
         </div>
+      </div>
+      <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
@@ -105,6 +113,8 @@
             <p>Not an employee. Michaela, remove this</p>
           </div>
         </div>
+      </div>
+      <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
@@ -116,7 +126,8 @@
             <p>Human resources, human emotions</p>
           </div>
         </div>
-        
+        </div>
+        <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
@@ -128,6 +139,8 @@
             <p>Supervisor. Has a fiancee (newly pregnant)</p>
           </div>
         </div>
+        </div>
+        <div class="image-wrapper">
         <div class="img_tile">
           <a href="https://www.youtube.com/watch?v=IFDe581_Rhk">
            <div class="img_overlay"></div>
@@ -141,6 +154,8 @@
             <p>Team leader, not bitter</p>
           </div>
         </div>
+        </div>
+        <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
@@ -152,6 +167,8 @@
             <p>Business development guru, two thumbs up!</p>
           </div>
         </div>
+        </div>
+        <div class="image-wrapper">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
