adding video for Michaela

--- a/takingstock.html
+++ b/takingstock.html
@@ -64,11 +64,13 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+          <a href="https://www.youtube.com/watch?v=Dy2SyTMfmQM">
           <div class="img_overlay"></div>
           <img
             src="./images/image2.png"
             alt="a young woman sitting at a desk looking at an iPad"
           />
+        </a>
           <div class="caption">
             <p class="bold">MICHAELA</p>
             <p>Administrator, assistant, iPad coordinator</p>
