adding link for doctor video

--- a/takingstock.html
+++ b/takingstock.html
@@ -173,11 +173,13 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+          <a href="https://www.youtube.com/watch?v=NX61XLNJTvQ">
           <div class="img_overlay"></div>
           <img
             src="./images/image4.png"
             alt="a doctor writing in a prescription pad"
           />
+        </a>
           <div class="caption">
             <p class="bold">DOCTOR</p>
             <p>Good doc, really nice guy</p>
