adding new video links

--- a/takingstock.html
+++ b/takingstock.html
@@ -80,6 +80,7 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+           <a href="https://www.youtube.com/watch?v=UoRWgyTJ9kU">
           <div class="img_overlay"></div>
           <img
             src="./images/image12.png"
@@ -106,6 +107,7 @@
       </div>
       <div class="image-wrapper">
         <div class="img_tile">
+          <a href="https://www.youtube.com/watch?v=f44YFPjaoVc">
           <div class="img_overlay"></div>
           <img
             src="./images/image10.png"
