adding and editing video links

--- a/takingstock.html
+++ b/takingstock.html
@@ -66,6 +66,7 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+          <a href="https://www.youtube.com/watch?v=UoRWgyTJ9kU">
           <div class="img_overlay"></div>
           <img
             src="./images/image2.png"
@@ -80,7 +81,6 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
-           <a href="https://www.youtube.com/watch?v=UoRWgyTJ9kU">
           <div class="img_overlay"></div>
           <img
             src="./images/image12.png"
@@ -94,6 +94,7 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+           <a href="https://www.youtube.com/watch?v=f44YFPjaoVc">
           <div class="img_overlay"></div>
           <img
             src="./images/image7.png"
@@ -162,6 +163,7 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+           <a href="https://www.youtube.com/watch?v=G9iFm9pAHYk">
           <div class="img_overlay"></div>
           <img
             src="./images/image11.png"
