adding final video links

--- a/takingstock.html
+++ b/takingstock.html
@@ -66,6 +66,7 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+          <a href="https://www.youtube.com/watch?v=UoRWgyTJ9kU">
           <div class="img_overlay"></div>
           <img
             src="./images/image2.png"
@@ -93,11 +94,13 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+          <a href="https://www.youtube.com/watch?v=f44YFPjaoVc">
           <div class="img_overlay"></div>
           <img
             src="./images/image7.png"
             alt="a young woman stands smiling in front of a whiteboard"
           />
+          </a>
           <div class="caption">
             <p class="bold">JADE</p>
             <p>Presentations, whiteboards, a real fighter</p>
@@ -160,11 +163,13 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+          <a href="https://www.youtube.com/watch?v=G9iFm9pAHYk">
           <div class="img_overlay"></div>
           <img
             src="./images/image11.png"
             alt="a middle aged man using a laptop and stroking his chin"
           />
+          </a>
           <div class="caption">
             <p class="bold">FRANK</p>
             <p>Business development guru, two thumbs up!</p>
