adding two missing video links and edited svg youtube logo

--- a/takingstock.html
+++ b/takingstock.html
@@ -108,7 +108,7 @@
       </div>
       <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=f44YFPjaoVc">
+          <a href="https://www.youtube.com/watch?v=Sv9AM3f8eh4">
           <div class="img_overlay"></div>
           <img
             src="./images/image10.png"
@@ -123,6 +123,7 @@
       </div>
       <div class="image-wrapper">
         <div class="img_tile">
+          <a href="https://www.youtube.com/watch?v=SL0WNQmeYRU"></a>
           <div class="img_overlay"></div>
           <img
             src="./images/image1.png"
@@ -135,6 +136,7 @@
         </div>
         </div>
         <div class="image-wrapper">
+          <a href="https://www.youtube.com/watch?v=gJFBggovrgQ&list=PL1a4hwPuRe1Cz_fe6RdT8VwDVOaahxi-F&index=10">
         <div class="img_tile">
           <div class="img_overlay"></div>
           <img
