fixing issue with simon video link

--- a/takingstock.html
+++ b/takingstock.html
@@ -136,13 +136,13 @@
         </div>
         </div>
         <div class="image-wrapper">
-          <a href="https://www.youtube.com/watch?v=gJFBggovrgQ&list=PL1a4hwPuRe1Cz_fe6RdT8VwDVOaahxi-F&index=10">
-        <div class="img_tile">
-          <div class="img_overlay"></div>
-          <img
-            src="./images/image6.png"
-            alt="a man speaking on the phone standing in front of a wall display saying productivity"
-          />
+          <div class="img_tile">
+            <a href="https://www.youtube.com/watch?v=gJFBggovrgQ"></a>
+            <div class="img_overlay"></div>
+            <img
+              src="./images/image6.png"
+              alt=""
+            />
           <div class="caption">
             <p class="bold">SIMON</p>
             <p>Supervisor. Has a fiancee (newly pregnant)</p>
