adding taking stock link;

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <h1>ENCOURAGING</h1>
       <h1>PRODUCTIONS</h1>
     </header>
+
     <main>
       <div class="flex-container">
         <div class="copy">
@@ -26,8 +27,10 @@
           <p>
             Mostly DIY, silly, no budget projects that are labours of love.
             We've produced sketches, podcasts, music videos and a web series
-            <a href="https://www.encouragingproductions.com/takingstock"
-              >Taking Stock</a
+            <span>
+              <a href="https://www.encouragingproductions.com/takingstock"
+                >Taking Stock</a
+              ></span
             >, which is set to be thrown out onto the internet throughout
             October.
           </p>
@@ -47,8 +50,13 @@
             allowfullscreen
           ></iframe>
         </div>
-
         <img src="./images/Production shortlist laurels - red.png" />
+        <div class="ts-logo">
+          <a href="https://www.encouragingproductions.com/takingstock"
+            >Taking Stock</a
+          >
+        </div>
+
         <p class="contact">
           <a href="mailto:cameron@encouragingproductions.com"
             >Contact: cameron@encouragingproductions.com</a
