--- a/takingstock.html
+++ b/takingstock.html
@@ -121,47 +121,49 @@
           </div>
         </div>
       </div>
-      <div class="image-wrapper">
-        <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=SL0WNQmeYRU"></a>
-          <div class="img_overlay"></div>
-          <img
-            src="./images/image1.png"
-            alt="a woman sitting at a computer smiling at the camera"
-          />
-          <div class="caption">
-            <p class="bold">GAIL</p>
-            <p>Human resources, human emotions</p>
-          </div>
-        </div>
-        </div>
         <div class="image-wrapper">
           <div class="img_tile">
-            <a href="https://www.youtube.com/watch?v=gJFBggovrgQ"></a>
-            <div class="img_overlay"></div>
+            <a href="https://www.youtube.com/watch?v=IFDe581_Rhk">
+             <div class="img_overlay"></div>
             <img
-              src="./images/image6.png"
-              alt=""
+              src="./images/image8.png"
+              alt="a woman using a laptop and smiling"
             />
-          <div class="caption">
-            <p class="bold">SIMON</p>
-            <p>Supervisor. Has a fiancee (newly pregnant)</p>
+          </a>
+            <div class="caption">
+              <p class="bold">ANDREA</p>
+              <p>Team leader, not bitter</p>
+            </div>
           </div>
-        </div>
-        </div>
+          </div>
+          <div class="image-wrapper">
+            <div class="img_tile">
+              <a href="https://www.youtube.com/watch?v=SL0WNQmeYRU">
+               <div class="img_overlay"></div>
+              <img
+                src="./images/image1.png"
+                alt=""
+              />
+            </a>
+            <div class="caption">
+              <p class="bold">GAIL</p>
+              <p>Human resources, human emotions</p>
+            </div>
+            </div>
+            </div>
         <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=IFDe581_Rhk">
+          <a href="https://www.youtube.com/watch?v=gJFBggovrgQ">
            <div class="img_overlay"></div>
           <img
-            src="./images/image8.png"
-            alt="a woman using a laptop and smiling"
+            src="./images/image6.png"
+            alt=""
           />
         </a>
-          <div class="caption">
-            <p class="bold">ANDREA</p>
-            <p>Team leader, not bitter</p>
-          </div>
+        <div class="caption">
+          <p class="bold">SIMON</p>
+          <p>Supervisor. Has a fiancee (newly pregnant)</p>
+        </div>
         </div>
         </div>
         <div class="image-wrapper">
