testing preload link on custom font

--- a/takingstock.html
+++ b/takingstock.html
@@ -24,6 +24,7 @@
       href="/TS_favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
+    <link rel="preload" href="PoplarStd.woff2" as="font" type="font/woff2" crossorigin>
     <title>TAKING STOCK</title>
   </head>
   <body>
