--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             We've produced sketches, podcasts, music videos and a web series
             <span>
               <a href="https://www.encouragingproductions.com/takingstock"
-                >Taking Stock</a
+                >TAKING STOCK</a
               ></span
             >, which is set to be thrown out onto the internet throughout
             October.
