adding taking stock link as an image

--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
           ></iframe>
         </div>
         <img src="./images/Production shortlist laurels - red.png" />
-        <div class="ts-logo">
-          <a href="https://www.encouragingproductions.com/takingstock"
-            >TAKING STOCK</a
-          >
-        </div>
+
+        <a href="https://www.encouragingproductions.com/takingstock"
+          ><img class="ts-logo" src="./TakingStock.png" alt="Taking Stock"
+        /></a>
 
         <p class="contact">
           <a href="mailto:cameron@encouragingproductions.com"
