replacing text logo with image for taking stock page

--- a/takingstock.html
+++ b/takingstock.html
@@ -29,7 +29,9 @@
   </head>
   <body>
     <header class="taking_stock_header">
-      <h1>TAKING STOCK</h1>
+      <a href="https://www.encouragingproductions.com/takingstock"
+      ><img class="ts-logo" src="./TakingStock.png" alt="Taking Stock"
+    /></a>
       <div class="icon">
         <a
         href="https://www.youtube.com/playlist?list=PL1a4hwPuRe1Cz_fe6RdT8VwDVOaahxi-F"
