adding form css and removing unused font files

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         <a href="https://www.encouragingproductions.com/takingstock"
           ><img class="ts-logo" src="./TakingStock.png" alt="Taking Stock"
         /></a>
+
         <form name="contact" method="POST" data-netlify="true">
+          <p>Get in touch ✍️</p>
           <p>
             <label>Your Name: <input type="text" name="name" /></label>
           </p>
@@ -68,7 +70,7 @@
             <label>Message: <textarea name="message"></textarea></label>
           </p>
           <p>
-            <button type="submit">Send</button>
+            <button role="button">Send</button>
           </p>
         </form>
 
