adding accessibility fixes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <html lang="en">
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -51,7 +52,7 @@
             allowfullscreen
           ></iframe>
         </div>
-        <img src="./images/Production shortlist laurels - red.png" />
+        <img alt="BGC Pro Talent Awards Production 2020 Shortlist" src="./images/Production shortlist laurels - red.png" />
 
         <a href="https://www.encouragingproductions.com/takingstock"
           ><img class="ts-logo" src="./TakingStock.png" alt="Taking Stock"
@@ -74,11 +75,7 @@
           </p>
         </form>
 
-        <!-- <p class="contact">
-          <a href="mailto:cameron@encouragingproductions.com"
-            >Contact: cameron@encouragingproductions.com</a
-          >
-        </p> -->
+  
       </div>
     </main>
   </body>
