fixing formatting issue on youtube logo

--- a/takingstock.html
+++ b/takingstock.html
@@ -35,9 +35,9 @@
       <div class="icon">
         <a
         href="https://www.youtube.com/playlist?list=PL1a4hwPuRe1Cz_fe6RdT8VwDVOaahxi-F"
-        aria-label="YouTube"
-        >
-        <img atl="YouTube logo" src="./images/youtube.svg" />
+        aria-label="Taking Stock YouTube playlist"
+        ><img alt ="YouTube logo" src="./images/youtube.svg"
+      /></a>
         <a
           href="https://www.encouragingproductions.com/"
           aria-label="encouragingproductions.com"
