removing unused image files and adding extra bottom margin to first image caption

--- a/takingstock.html
+++ b/takingstock.html
@@ -63,7 +63,7 @@
           </a>
           <div class="caption">
             <p class="bold">MR WINSTANLEY</p>
-            <p>Manager, leader, currently out of office</p>
+            <p id="extra-margin">Manager, leader, currently out of office</p>
           </div>
         </div>
         </div>
