adding link to BCG awards

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
             allowfullscreen
           ></iframe>
         </div>
+        <a href="https://www.comedy.co.uk/pro/inside_track/bcg-pro-talent-awards-production-2020-results/">
         <img alt="BGC Pro Talent Awards Production 2020 Shortlist" src="./images/Production shortlist laurels - red.png" />
-
+       </a>
         <a href="https://www.encouragingproductions.com/takingstock"
           ><img class="ts-logo" src="./TakingStock.png" alt="Taking Stock"
         /></a>
